--- a/docs/main.tex
+++ b/docs/main.tex
@@ -3157,7 +3157,7 @@ One final useful function is the \texttt{filter()} function. It allows you to fi
 
 \chapter{Plotting}\label{plotting-1}
 
-(16 December, 2024, 12:11)
+(16 December, 2024, 13:49)
 
 \section{The basics of ggplot2}\label{the-basics-of-ggplot2}
 
@@ -7419,7 +7419,7 @@ The value we get is going to be the probability of t-score on one tail of the di
 \end{Highlighting}
 \end{Shaded}
 
-It looks like our p-value is larger than the critical value \(\alpha = 0.05\). So, we must \textbf{cannot reject} our null hypothesis. This means that, there is a big chance of observing such a difference in mean when we have only a total of 4 data points.
+It looks like our p-value is larger than the critical value \(\alpha = 0.05\). So, we \textbf{cannot reject} our null hypothesis. This means that, there is a big chance of observing such a difference in mean when we have only a total of 4 data points.
 
 Even though our effect size is large as can be seen below, our results are \textbf{not significant}. In other words, the big difference is due to chance and we cannot conclude that there is a difference in the voice pitches of people who wear blue and people who wear red.
 
